# RayTracer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Canvas/: Canvas.cpp  Canvas.h
src/Color/: Color.cpp  Color.h
src/Computation/: Computation.cpp  Computation.h
src/Intersection/: Intersection.cpp  Intersection.h
src/Light/: Light.cpp  Light.h
src/Material/: Material.cpp  Material.h
src/Matrix/: Matrix.cpp  Matrix.h
src/Object/: Object.cpp  Object.h
src/Object/Cube/: Cube.cpp  Cube.h
src/Object/Plane/: Plane.cpp  Plane.h
src/Object/Sphere/: Sphere.cpp  Sphere.h
src/Pattern/: Pattern.cpp  Pattern.h
src/Pattern/Gradient/: Gradient.cpp  Gradient.h
src/Pattern/Grid/: Grid.cpp  Grid.h
src/Pattern/Ring/: Ring.cpp  Ring.h
src/Pattern/Solid/: Solid.cpp  Solid.h
src/Pattern/Stripe/: Stripe.cpp  Stripe.h
src/Plane/: Plane.cpp
src/Ray/: Ray.cpp  Ray.h
src/Sphere/: Sphere.cpp  Sphere.h
src/Surface/: Surface.cpp  Surface.h
src/Transformations/: Transformations.cpp  Transformations.h
src/Tuple/: Tuple.cpp  Tuple.h
src/World/: World.cpp  World.h
tests/: CMakeLists.txt  Camera_test.cpp  Canvas_test.cpp  Color_test.cpp  Computation_test.cpp  Cube_test.cpp  Gradient_test.cpp  Grid_test.cpp  Intersection_test.cpp  Light_test.cpp  Material_test.cpp  Matrix_test.cpp  Object_test.cpp  Pattern_test.cpp  Plane_test.cpp  Ray_test.cpp  Ring_test.cpp  Solid_test.cpp  Sphere_test.cpp  Stripe_test.cpp  Surface_test.cpp  Transformations_test.cpp  Tuple_test.cpp  World_test.cpp
